Dropdown overflow fixed

--- a/js/tm/adminhtml/core/actions.css
+++ b/js/tm/adminhtml/core/actions.css
@@ -1,3 +1,6 @@
+.grid .hor-scroll {
+    overflow: visible;
+}
 .tm-action-select-wrap {
     position: relative;
 }
